2022-May-02 Struan Robertson

		* PseudoIsomerizationReaction.cpp: Corrected to account for Type I potentials.

		* PriorDistFragmentation.cpp: Initial implementation of fragmentation distribution
		output.

2022-April-25 Struan Robertson

		* System.h, main.cpp: Version update.

2022-April-23 Struan Robertson

		* Marquardt.cpp: Removed requirement that all transition matrices should be of the 
		same size during fitting. This requirement was put in place to avoid unnecessary
		re-calculation of the density of states, however this was causing some fitting
		calculations to take an excessive amount of time (particularly low temperature, 
		higher precision instances) and should be unnecessary as density of states re-
		calculation is only triggered when a new upper threshold is detected. The old 
		behaviour can be obtained by setting "me:useTheSameCellNumberForAllConditions".

2022-February-27 Struan Robertson

		* ParallelManager.h, ConditionsManager.cpp, System.h/.cpp: Fixes for sink reaction 
		hang.

		* Documentation update.

2022-February-20 Struan Robertson

		* gWellRadiationTransition.h/.cpp: Fixes for radiation transition based on Aij.

2022-February-20 Struan Robertson

		* FourierGrid1D.cpp, mesmerPlugins.xsd, Ethyl_H_to_Ethane_inversion.xml: Added
		a symmetry element to FourierGrid to account for inversion symmetry etc.

2022-February-13 Struan Robertson

		* gWellProperties.h, gWellRadiationTransition.h/.cpp: Extension of radiation transition
		method to allow for definition based on either adsorption or emission.

2021-December-29 Struan Robertson

		* gWellProperties.h, gWellRadiationTransition.h/.cpp, CollisionOperator.cpp, 
		gDensityOfStates.cpp, Molecule.h/.cpp: Initial implementation of radiation transitions.

2021-December-27 Struan Robertson

		* gWellProperties.h, MolecularManager.h: Include discipline changes.

		* ConditionsManager.h: Preparation for traces error analysis.

2021-November-21 Struan Robertson
